--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
+    "@lit-protocol/auth-helpers": "^7.0.4",
+    "@lit-protocol/constants": "^7.0.4",
+    "@lit-protocol/contracts-sdk": "^7.0.4",
+    "@lit-protocol/lit-node-client": "^7.0.4",
     "@prisma/client": "^6.1.0",
     "@privy-io/react-auth": "^1.98.2",
     "@privy-io/server-auth": "^1.17.0",
@@ -17,8 +21,12 @@
     "@radix-ui/react-dropdown-menu": "^2.1.4",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@solana/web3.js": "^1.98.0",
+    "bs58": "^6.0.0",
+    "chalk": "^5.4.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "ethers": "^6.13.5",
     "framer-motion": "^11.11.17",
     "lucide-react": "^0.460.0",
     "next": "15.0.3",
@@ -31,6 +39,8 @@
     "swr": "^2.3.0",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
+    "tweetnacl": "^1.0.3",
+    "typestub-ipfs-only-hash": "^4.0.0",
     "winston": "^3.17.0",
     "zod": "^3.23.8"
   },
