--- a/package.json
+++ b/package.json
@@ -18,17 +18,20 @@
     "@privy-io/react-auth": "^1.98.2",
     "@privy-io/server-auth": "^1.17.0",
     "@radix-ui/react-avatar": "^1.1.2",
+    "@radix-ui/react-dialog": "^1.1.4",
     "@radix-ui/react-dropdown-menu": "^2.1.4",
     "@radix-ui/react-label": "^2.1.0",
-    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-separator": "^1.1.1",
+    "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-tooltip": "^1.1.6",
     "@solana/web3.js": "^1.98.0",
     "bs58": "^6.0.0",
     "chalk": "^5.4.1",
-    "class-variance-authority": "^0.7.0",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "ethers": "^6.13.5",
     "framer-motion": "^11.11.17",
-    "lucide-react": "^0.460.0",
+    "lucide-react": "^0.469.0",
     "next": "15.0.3",
     "next-safe-action": "^7.10.2",
     "next-themes": "^0.4.3",
