--- a/package.json
+++ b/package.json
@@ -34,11 +34,12 @@
     "lucide-react": "^0.469.0",
     "next": "15.0.3",
     "next-safe-action": "^7.10.2",
-    "next-themes": "^0.4.3",
+    "next-themes": "^0.4.4",
     "prisma": "^6.1.0",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "react-hook-form": "^7.53.2",
+    "sonner": "^1.7.1",
     "swr": "^2.3.0",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
