--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.6",
     "@solana/web3.js": "^1.98.0",
+    "axios": "^1.7.9",
     "bs58": "^6.0.0",
     "chalk": "^5.4.1",
     "class-variance-authority": "^0.7.1",
